# rust-training

./: README.md
blog-oop/: Cargo.toml  README.md
blog-oop/src/: lib.rs  main.rs
maxmessage/: Cargo.toml  Readme.md
maxmessage/src/: lib.rs
minigrep/: Makefile  README.md  poem.txt
minigrep/src/: lib.rs  main.rs
miniremap/: Cargo.toml  Makefile  README.md  config.yml
miniremap/src/: input.rs  main.rs  output.rs  select.rs
miniremap/src/config/: application.rs  key.rs  key_action.rs  mod.rs  modmap.rs
rsinput/: Cargo.toml  Makefile
rsinput/input/: input.py  key.txt  keyboard.txt  pynput_client.py  pynput_service.py
rsinput/src/: lib.rs  main.rs
snippet/src/: lib.rs  main.rs
webserver/: 404.html  Readme.md  hello.html
webserver/src/: lib.rs  main.rs
