[package]
name = "miniremap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 返回任意错误类型
anyhow = "1.0.53"
# 命令行
clap = { version = "3.0.14", features = ["derive"] }
env_logger = "0.9.0"
evdev = "0.11.3"
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }
